Improving SEO and good code practices

--- a/2024.html
+++ b/2024.html
@@ -1,14 +1,14 @@
+<!-- Class for the background photo -->
 <div class="background bg-2024"></div>
 
-<!-- Contenido principal -->
+<!-- 2024 Season -->
 <main>
+    <!-- Victor Hugo Allende -->
     <section class="content-grid">
-        <!-- Imagen izquierda -->
         <div class="image-container">
             <img src="assets/images/victor-portada.webp" alt="Victor Hugo Allende">
         </div>
 
-        <!-- Descripción -->
         <div class="description">
             <h2>Victor Hugo Allende</h2>
             <p>En esta charla tuvimos el honor de escuchar las vivencias de «Victor Hugo Allende», Veterano de guerra de Malvinas, mecánico de primera línea de combate de aviones Mirage III. A través de sus palabras, conocimos tanto el desarrollo de sus acciones en el conflicto, como el transcurso de su vida hasta el día de hoy. Te agradecemos eternamente Victor por compartir esta charla con nosotros.</p>
@@ -25,13 +25,12 @@
         </div>
     </section>
 
+    <!-- Dante Hugo Daure -->
     <section class="content-grid">
-        <!-- Imagen izquierda -->
         <div class="image-container">
             <img src="assets/images/dante-portada.webp" alt="Dante Hugo Daure">
         </div>
 
-        <!-- Descripción -->
         <div class="description">
             <h2>Dante Hugo Daure</h2>
             <p>En esta charla tuvimos el honor de escuchar las vivencias de «Dante Hugo Daure», Veterano de guerra de Malvinas, mecánico de instrumental de aviones Mirage III. A través de sus palabras, conocimos tanto el desarrollo de sus acciones en el conflicto, como el transcurso de su vida hasta el día de hoy. Te agradecemos eternamente Dante por compartir esta charla con nosotros.</p>
@@ -48,13 +47,12 @@
         </div>
     </section>
 
+    <!-- Sergio Luis Ferreyra -->
     <section class="content-grid">
-        <!-- Imagen izquierda -->
         <div class="image-container">
             <img src="assets/images/sergio-portada.webp" alt="Sergio Luis Ferreyra">
         </div>
 
-        <!-- Descripción -->
         <div class="description">
             <h2>Sergio Luis Ferreyra</h2>
             <p>En esta charla tuvimos el honor de escuchar las vivencias de "Sergio Luis Ferreyra", Veterano de guerra de Malvinas, mecánico de instrumental de aviones Mirage III. A través de sus palabras, conocimos tanto el desarrollo de sus acciones en el conflicto, como el transcurso de su vida hasta el día de hoy. Te agradecemos eternamente Sergio por compartir esta charla con nosotros.</p>
@@ -71,13 +69,12 @@
         </div>
     </section>
 
+    <!-- Ángel Grassi -->
     <section class="content-grid">
-        <!-- Imagen izquierda -->
         <div class="image-container">
             <img src="assets/images/angel-portada.webp" alt="Ángel Grassi">
         </div>
 
-        <!-- Descripción -->
         <div class="description">
             <h2>Ángel Grassi</h2>
             <p>En esta charla tuvimos el honor de escuchar las vivencias de "Ángel Grassi", Veterano de guerra de Malvinas, mecánico de equipos radioeléctricos de aviones Mirage III. A través de sus palabras, conocimos tanto el desarrollo de sus acciones en el conflicto, como el transcurso de su vida hasta el día de hoy. Te agradecemos eternamente Ángel por compartir esta charla con nosotros.</p>
@@ -94,13 +91,12 @@
         </div>
     </section>
 
+    <!-- Vicente Sánchez -->
     <section class="content-grid">
-        <!-- Imagen izquierda -->
         <div class="image-container">
             <img src="assets/images/vicente-portada.webp" alt="Vicente Sánchez">
         </div>
 
-        <!-- Descripción -->
         <div class="description">
             <h2>Vicente Sánchez</h2>
             <p>En esta charla tuvimos el honor de escuchar las vivencias de "Vicente Sánchez", Veterano de guerra de Malvinas, mecánico de equipos radioeléctricos de aviones Mirage III. A través de sus palabras, conocimos tanto el desarrollo de sus acciones en el conflicto, como el transcurso de su vida hasta el día de hoy. Te agradecemos eternamente Vicente por compartir esta charla con nosotros.</p>
@@ -117,9 +113,9 @@
         </div>
     </section>
 
+    <!-- Redirect button to "Inicio" -->
     <section id="Inicio">
         <div class="overlay"></div>
         <a href="index.html" class="btn">Volver</a>
     </section>
 </main>
-
