--- a/content.html
+++ b/content.html
@@ -1,29 +1,34 @@
-<!-- Imagen de fondo -->
+<!-- Class for the background photo -->
 <div class="background bg-inicio"></div>
 
-<!-- Contenido principal -->
+<!-- Home page -->
 <main>
+    <!-- Presentation of the website -->
     <section id="Bienvenida">
         <div class="overlay"></div>
-        <h2>Bienvenidos a «Nuestra voz es la voz de la historia»</h2>
+        <h1 class="title">Bienvenidos a «Nuestra voz es la voz de la historia»</h1>
         <p>El lugar donde las voces de nuestros héroes resonarán por siempre.</p>
     </section>
 
+    <!-- Redirect button to "¿Que somos?" -->
     <section id="¿Que somos?">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="que-somos.html">¿Qué somos?</a>
     </section>
 
+    <!-- Redirect button to "¿Donde encontrarnos?" -->
     <section id="¿Donde encontrarnos?">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="donde-encontrarnos.html">¿Dónde encontrarnos?</a>
     </section>
 
+    <!-- Redirect button to "¿Quienes somos?" -->
     <section id="¿Quienes somos?">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="quienes-somos.html">¿Quiénes Somos?</a>
     </section>
 
+    <!-- Redirect button to "Contacto" -->
     <section id="Contacto">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="contacto.html">Contacto</a>
