--- a/donde-encontrarnos.html
+++ b/donde-encontrarnos.html
@@ -1,30 +1,36 @@
-<!-- Imagen de fondo -->
+<!-- Class for the background photo -->
 <div class="background bg-donde"></div>
 
-<!-- Contenido principal -->
+<!-- Where find us section -->
 <main>
+    
+    <!-- Explanation of where to find us -->
     <section id="¿Donde encontrarnos?">
         <div class="overlay"></div>
         <h2>¿Dónde encontrarnos?</h2>
         <p>Encuentra las charlas completas en YouTube o en formato podcast en Spotify.</p>
     </section>
 
+    <!-- Redirects to other project platforms -->
     <section id="Plataformas" class="btn-container">
         <div class="overlay"></div>
         <a href="https://www.youtube.com/@VozdelaHistoria" target="_blank" class="btn btn-youtube">YouTube</a>
         <a href="https://open.spotify.com/show/5huKoxz7noLsl74zYz5wrn?si=zQKnaFMwRACQw-GkxPIpcg&nd=1&dlsi=680729d2d928406f" target="_blank" class="btn btn-spotify">Spotify</a>
     </section>
 
+    <!-- Section of empty space -->
     <section id="Space1">
         <div class="Space1"></div>
         <h2> </h2>
     </section>
 
+    <!-- Redirect button to "Inicio" -->
     <section id="Inicio">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="content.html">Volver</a>
     </section>
 
+    <!-- Section of empty space -->
     <section id="Space2">
         <div class="Space2"></div>
         <h2> </h2>
