--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,27 @@
+<!-- General footer present throughout the website -->
 <footer class="main-footer">
     <div class="footer-content">
+
+        <!-- All rights reserved -->
         <p>© 2025 Nuestra voz es la voz de la historia - Todos los derechos reservados</p>
         <div class="footer-buttons">
+
+            <!-- Redirect button to "YouTube" -->
             <a href="https://www.youtube.com/@VozdelaHistoria" target="_blank" class="footer-btn">
                 <span class="btn-text">YouTube</span>
             </a>
+
+            <!-- Redirect button to "Spotify" -->
             <a href="https://open.spotify.com/show/5huKoxz7noLsl74zYz5wrn?si=zQKnaFMwRACQw-GkxPIpcg&nd=1&dlsi=680729d2d928406f" target="_blank" class="footer-btn">
                 <span class="btn-text">Spotify</span>
             </a>
+
+            <!-- Redirect button to "Gmail" -->
             <a href="mailto:vozdelahistoria@gmail.com" class="footer-btn">
                 <span class="btn-text">Correo electrónico</span>
             </a>
+
+            <!-- Redirect button to "GitHub" -->
             <a href="https://github.com/FelipeAscencio" target="_blank" class="footer-btn">
                 <span class="btn-text">GitHub</span>
             </a>
