--- a/header.html
+++ b/header.html
@@ -1,23 +1,42 @@
+<!-- General header present throughout the website -->
 <header class="main-header">
+
+    <!-- Logo -->
     <div class="logo">
         <img src="assets/images/logo.webp" alt="Logo">
         <h1>Nuestra voz es la voz de la historia</h1>
     </div>
+
+    <!-- Navigation menu -->
     <nav class="main-nav">
         <ul>
+
+            <!-- Redirect to "Inicio" -->
             <li><a href="#" class="btn btn-load" data-page="content.html">Inicio</a></li>
             <li class="dropdown">
+
+                <!-- Redirect to "Voces" -->
                 <a href="#" class="btn btn-load" data-page="voces.html">Voces ▾</a>
                 <ul class="dropdown-content">
+
+                    <!-- Redirect to "Season 2024" -->
                     <li><a href="#" class="btn btn-load" data-page="2024.html">2024</a></li>
                 </ul>
             </li>
+
+            <!-- Redirect to "Privacidad" -->
             <li><a href="#" class="btn btn-load" data-page="privacidad.html">Política de privacidad</a></li>
         </ul>
+
+        <!-- Redirection to social networks -->
         <div class="social-buttons">
+
+            <!-- Redirect to "YouTube" -->
             <a href="https://www.youtube.com/@VozdelaHistoria" target="_blank">
                 <img src="assets/images/boton-yt.webp" alt="YouTube">
             </a>
+
+            <!-- Redirect to "Spotify" -->
             <a href="https://open.spotify.com/show/5huKoxz7noLsl74zYz5wrn?si=zQKnaFMwRACQw-GkxPIpcg&nd=1&dlsi=680729d2d928406f" target="_blank">
                 <img src="assets/images/boton-spotify.webp" alt="Spotify">
             </a>
