--- a/que-somos.html
+++ b/que-somos.html
@@ -1,7 +1,9 @@
+<!-- Class for the background photo -->
 <div class="background bg-que"></div>
 
-<!-- Contenido principal -->
+<!-- What we are section -->
 <main>
+    <!-- Explanation of the historical project -->
     <section id="¿Que somos?">
         <div class="overlay"></div>
         <h2>¿Qué somos?</h2>
@@ -10,16 +12,19 @@
         <p> ¡Viva la patria!</p>
     </section>
 
+    <!-- Section of empty space -->
     <section id="Space1">
         <div class="Space1"></div>
         <h2> </h2>
     </section>
 
+    <!-- Redirect button to "Inicio" -->
     <section id="Inicio">
         <div class="overlay"></div>
         <a href="index.html" class="btn">Volver</a>
     </section>
 
+    <!-- Section of empty space -->
     <section id="Space2">
         <div class="Space2"></div>
         <h2> </h2>
