--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -1,12 +1,15 @@
-<!-- Imagen de fondo -->
+<!-- Class for the background photo -->
 <div class="background bg-quienes"></div>
 
-<!-- Contenido principal -->
+<!-- Who we are section -->
 <main>
+    <!-- Project members board -->
     <section id="¿Quienes somos?">
         <div class="overlay"></div>
         <h2>¿Quiénes Somos?</h2>
         <div class="team-container">
+
+            <!-- Ascencio Sergio Rubén -->
             <div class="team-member">
                 <img src="assets/images/sergio.webp" alt="Persona 1">
                 <div class="info">
@@ -14,6 +17,8 @@
                     <p>Veterano de Guerra, Entrevistador, Coordinador y Productor Ejecutivo.</p>
                 </div>
             </div>
+
+            <!-- Ascencio Felipe Santino -->
             <div class="team-member">
                 <img src="assets/images/felipe.webp" alt="Persona 2">
                 <div class="info">
@@ -21,6 +26,8 @@
                     <p>Entrevistador, Editor, Guionista y Productor Ejecutivo.</p>
                 </div>
             </div>
+
+            <!-- Abril Biancotti Patiño -->
             <div class="team-member">
                 <img src="assets/images/abril.webp" alt="Persona 3">
                 <div class="info">
@@ -31,6 +38,7 @@
         </div>
     </section>
 
+    <!-- Redirect button to "Inicio" -->
     <section id="Inicio">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="content.html">Volver</a>
