--- a/voces.html
+++ b/voces.html
@@ -1,24 +1,29 @@
+<!-- Class for the background photo -->
 <div class="background bg-voces"></div>
 
-<!-- Contenido principal -->
+<!-- Voices section -->
 <main>
+    <!-- Season 1 Summary with Redirect Button -->
     <section id="2024">
         <div class="overlay"></div>
         <h2>2024</h2>
         <p>Charlas con: Allende Victor Hugo, Daure Dante Hugo, Ferreyra Sergio Luis, Grassi Ángel y Sánchez Vicente.</p>
-        <a href="#" class="btn" onclick="loadPageTemps('2024.html')">Ver más</a>
+        <a href="#" class="btn" onclick="loadPage('2024.html')">Ver más</a>
     </section>
 
+    <!-- Section of empty space -->
     <section id="Space1">
         <div class="Space1"></div>
         <h2> </h2>
     </section>
 
+    <!-- Redirect button to "Inicio" -->
     <section id="Inicio">
         <div class="overlay"></div>
         <a href="index.html" class="btn">Volver</a>
     </section>
 
+    <!-- Section of empty space -->
     <section id="Space2">
         <div class="Space2"></div>
         <h2> </h2>
