--- a/que-somos.html
+++ b/que-somos.html
@@ -3,6 +3,12 @@
 
 <!-- What we are section -->
 <main>
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+    
     <!-- Explanation of the historical project -->
     <section id="¿Que somos?">
         <div class="overlay"></div>
@@ -13,8 +19,8 @@
     </section>
 
     <!-- Section of empty space -->
-    <section id="Space1">
-        <div class="Space1"></div>
+    <section id="Space">
+        <div class="Space"></div>
         <h2> </h2>
     </section>
 
@@ -25,8 +31,8 @@
     </section>
 
     <!-- Section of empty space -->
-    <section id="Space2">
-        <div class="Space2"></div>
+    <section id="Space">
+        <div class="Space"></div>
         <h2> </h2>
     </section>
 </main>
