--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -3,6 +3,12 @@
 
 <!-- Who we are section -->
 <main>
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Project members board -->
     <section id="¿Quienes somos?">
         <div class="overlay"></div>
@@ -38,9 +44,21 @@
         </div>
     </section>
 
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Redirect button to "Inicio" -->
     <section id="Inicio">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="content.html">Volver</a>
+    </section>
+
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
     </section>
 </main>
