--- a/2024.html
+++ b/2024.html
@@ -3,6 +3,12 @@
 
 <!-- 2024 Season -->
 <main>
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Victor Hugo Allende -->
     <section class="content-grid">
         <div class="image-container">
@@ -23,6 +29,12 @@
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/7w07L8kgKF2LRNdKSBg0AH" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
+    </section>
+
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
     </section>
 
     <!-- Dante Hugo Daure -->
@@ -47,6 +59,12 @@
         </div>
     </section>
 
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Sergio Luis Ferreyra -->
     <section class="content-grid">
         <div class="image-container">
@@ -67,6 +85,12 @@
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/0N5ASYhkUeFozJlb0NfCZ2?utm_source=generator" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
+    </section>
+
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
     </section>
 
     <!-- Ángel Grassi -->
@@ -91,6 +115,12 @@
         </div>
     </section>
 
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Vicente Sánchez -->
     <section class="content-grid">
         <div class="image-container">
@@ -113,9 +143,21 @@
         </div>
     </section>
 
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Redirect button to "Inicio" -->
     <section id="Inicio">
         <div class="overlay"></div>
         <a href="index.html" class="btn">Volver</a>
+    </section>
+
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
     </section>
 </main>
