--- a/content.html
+++ b/content.html
@@ -3,6 +3,12 @@
 
 <!-- Home page -->
 <main>
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Presentation of the website -->
     <section id="Bienvenida">
         <div class="overlay"></div>
@@ -32,5 +38,11 @@
     <section id="Contacto">
         <div class="overlay"></div>
         <a href="#" class="btn btn-load" data-page="contacto.html">Contacto</a>
+    </section>
+
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
     </section>
 </main>
