--- a/donde-encontrarnos.html
+++ b/donde-encontrarnos.html
@@ -4,6 +4,12 @@
 <!-- Where find us section -->
 <main>
     
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+    
     <!-- Explanation of where to find us -->
     <section id="¿Donde encontrarnos?">
         <div class="overlay"></div>
@@ -19,8 +25,8 @@
     </section>
 
     <!-- Section of empty space -->
-    <section id="Space1">
-        <div class="Space1"></div>
+    <section id="Space">
+        <div class="Space"></div>
         <h2> </h2>
     </section>
 
@@ -31,8 +37,8 @@
     </section>
 
     <!-- Section of empty space -->
-    <section id="Space2">
-        <div class="Space2"></div>
+    <section id="Space">
+        <div class="Space"></div>
         <h2> </h2>
     </section>
 </main>
