--- a/privacidad.html
+++ b/privacidad.html
@@ -3,6 +3,13 @@
 
 <!-- Privacy Policy Section -->
 <main>
+    
+    <!-- Section of empty space -->
+    <section id="Space">
+        <div class="Space"></div>
+        <h2> </h2>
+    </section>
+
     <!-- Introduction -->
     <section id="Introducción">
         <div class="overlay"></div>
